[gd_scene load_steps=25 format=3 uid="uid://cdwjkjxuwje8l"]

[ext_resource type="Script" path="res://minigames/minigame_components/minigame_window.gd" id="1_g0em6"]
[ext_resource type="Texture2D" uid="uid://bk4xnliqpem8r" path="res://minigames/checker.png" id="2_1fvgc"]
[ext_resource type="Texture2D" uid="uid://d1yvmow74jd7b" path="res://minigames/minigame_components/art/wormninepatch.png" id="2_3q0bx"]
[ext_resource type="Script" path="res://minigames/minigame_components/minigame_timer.gd" id="2_dugyg"]
[ext_resource type="Theme" uid="uid://bd071vba4lnc4" path="res://theme.tres" id="3_crilh"]
[ext_resource type="Texture2D" uid="uid://cyev0lpnw2uoi" path="res://minigames/minigame_components/art/wormHead-sheet.png" id="3_eygej"]
[ext_resource type="Texture2D" uid="uid://cb1d34g7c3us5" path="res://minigames/minigame_components/art/wormbody.png" id="4_h3ybh"]
[ext_resource type="Texture2D" uid="uid://dgjt431rsabh8" path="res://minigames/minigame_components/art/birdSheet.png" id="5_x5p64"]
[ext_resource type="FontFile" uid="uid://da7xd0ojorof3" path="res://Mario-Party-Hudson-Font.ttf" id="8_mcpcr"]
[ext_resource type="Script" path="res://text_effect_jiggle.gd" id="9_ishqi"]

[sub_resource type="Shader" id="Shader_857ba"]
code = "shader_type canvas_item;
render_mode blend_mix;


varying vec4 modulate;

void vertex() {
	modulate = COLOR;
}

void fragment() {
	vec2 uv = UV;
	uv += TIME * 0.2;
	COLOR.rgb = (1.0 - texture(TEXTURE, uv).rgb * 0.5) * modulate.rgb;
	COLOR.a = modulate.a;
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pf4u7"]
shader = SubResource("Shader_857ba")

[sub_resource type="AtlasTexture" id="AtlasTexture_tmmp1"]
atlas = ExtResource("3_eygej")
region = Rect2(0, 0, 142, 132)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pilo"]
atlas = ExtResource("3_eygej")
region = Rect2(142, 0, 142, 132)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2wqk"]
atlas = ExtResource("3_eygej")
region = Rect2(284, 0, 142, 132)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofn2l"]
atlas = ExtResource("3_eygej")
region = Rect2(0, 0, 142, 132)

[sub_resource type="SpriteFrames" id="SpriteFrames_a6unc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmmp1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pilo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2wqk")
}],
"loop": true,
"name": &"Afraid",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofn2l")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_e3cei"]
atlas = ExtResource("5_x5p64")
region = Rect2(320, 0, 320, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmnxx"]
atlas = ExtResource("5_x5p64")
region = Rect2(640, 0, 320, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_hiuem"]
atlas = ExtResource("5_x5p64")
region = Rect2(0, 160, 320, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ew7r8"]
atlas = ExtResource("5_x5p64")
region = Rect2(320, 160, 320, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnvmy"]
atlas = ExtResource("5_x5p64")
region = Rect2(0, 0, 320, 160)

[sub_resource type="SpriteFrames" id="SpriteFrames_655wo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3cei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmnxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hiuem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ew7r8")
}],
"loop": false,
"name": &"EatingWorm",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnvmy")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="RichTextEffect" id="RichTextEffect_jy63y"]
script = ExtResource("9_ishqi")

[node name="TestLoadMinigameScene" type="CanvasLayer"]
script = ExtResource("1_g0em6")

[node name="BackgroundRotator" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="BackgroundRotator"]
modulate = Color(0.120437, 0, 0.867205, 0.612)
material = SubResource("ShaderMaterial_pf4u7")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1353.0
offset_top = -1152.0
offset_right = 1391.0
offset_bottom = 1028.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_1fvgc")
stretch_mode = 1

[node name="Timer" type="Control" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 3
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 2.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_crilh")
script = ExtResource("2_dugyg")

[node name="TimerWormArt" type="HBoxContainer" parent="Timer"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 91.0
offset_top = 0.0200806
offset_right = 91.0
offset_bottom = 0.0200806
grow_horizontal = 2
grow_vertical = 2

[node name="WormHead" type="AnimatedSprite2D" parent="Timer/TimerWormArt"]
texture_filter = 1
position = Vector2(0, 19)
sprite_frames = SubResource("SpriteFrames_a6unc")
animation = &"Idle"
centered = false

[node name="WormBody" type="Sprite2D" parent="Timer/TimerWormArt"]
texture_filter = 1
position = Vector2(142, 19)
texture = ExtResource("4_h3ybh")
centered = false

[node name="Bird" type="AnimatedSprite2D" parent="Timer"]
texture_filter = 1
position = Vector2(1325, 80.0201)
sprite_frames = SubResource("SpriteFrames_655wo")
animation = &"Idle"

[node name="MiniGameControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
pivot_offset = Vector2(720, 405)
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SubViewportContainer" type="SubViewportContainer" parent="MiniGameControl"]
layout_mode = 0
offset_right = 1440.0
offset_bottom = 810.0

[node name="SubViewport" type="SubViewport" parent="MiniGameControl/SubViewportContainer"]
unique_name_in_owner = true
handle_input_locally = false
physics_object_picking = true
size = Vector2i(1440, 810)
render_target_update_mode = 4

[node name="CanvasLayer" type="CanvasLayer" parent="MiniGameControl/SubViewportContainer/SubViewport"]

[node name="GameOver" type="Control" parent="MiniGameControl/SubViewportContainer/SubViewport/CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLost" type="Control" parent="MiniGameControl/SubViewportContainer/SubViewport/CanvasLayer/GameOver"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="MiniGameControl/SubViewportContainer/SubViewport/CanvasLayer/GameOver/GameOverLost"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.482353)

[node name="Label" type="Label" parent="MiniGameControl/SubViewportContainer/SubViewport/CanvasLayer/GameOver/GameOverLost"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -11.5
offset_right = 31.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_crilh")
text = "You lost"

[node name="GameOverWon" type="Control" parent="MiniGameControl/SubViewportContainer/SubViewport/CanvasLayer/GameOver"]
auto_translate_mode = 1
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="MiniGameControl/SubViewportContainer/SubViewport/CanvasLayer/GameOver/GameOverWon"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.482353)

[node name="Label" type="Label" parent="MiniGameControl/SubViewportContainer/SubViewport/CanvasLayer/GameOver/GameOverWon"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -11.5
offset_right = 31.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_crilh")
text = "You Won"

[node name="OkButton" type="Button" parent="MiniGameControl/SubViewportContainer/SubViewport/CanvasLayer/GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = 145.0
offset_right = 56.5
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_crilh")
text = "Okay"

[node name="Border" type="NinePatchRect" parent="MiniGameControl"]
unique_name_in_owner = true
modulate = Color(0.717519, 0.00132148, 0.846041, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -26.0
offset_top = -44.0
offset_right = 41.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3q0bx")
draw_center = false
region_rect = Rect2(0, 0, 256, 256)
patch_margin_left = 50
patch_margin_top = 50
patch_margin_right = 55
patch_margin_bottom = 50
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Score" type="RichTextLabel" parent="."]
visible = false
modulate = Color(2.06962e-06, 0.802756, 0.231601, 1)
offset_left = 401.0
offset_top = 322.0
offset_right = 1213.0
offset_bottom = 631.0
theme_override_fonts/normal_font = ExtResource("8_mcpcr")
theme_override_font_sizes/normal_font_size = 150
bbcode_enabled = true
text = "[shake]+10 BUFF[/shake]"

[node name="Prompt" type="RichTextLabel" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
offset_top = 37.0
offset_right = 16.0
offset_bottom = -657.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.0249388
theme = ExtResource("3_crilh")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 8
theme_override_constants/shadow_offset_x = 0
theme_override_font_sizes/normal_font_size = 100
bbcode_enabled = true
text = "[jiggle amp=2 freq=5][center]CHINA[/center][/jiggle]"
custom_effects = [SubResource("RichTextEffect_jy63y")]

[connection signal="pressed" from="MiniGameControl/SubViewportContainer/SubViewport/CanvasLayer/GameOver/OkButton" to="." method="_on_ok_button_pressed"]
